chore L01-97: removed redundant variable